Выполнен рефакторинг кода. Внесены правки по ревью